<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.Login"
    android:background="@color/yellow"
    android:padding="30dp"
    android:transitionName="transition_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/genaral_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_username"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/user_name_icon"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/brandon_grotesque_black"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_password"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/brandon_grotesque_black"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/remember_me"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/black"
                android:text="@string/remember_me"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:onClick="callForgetPassword"
                android:text="@string/forget_password" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:onClick="loginUser"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/callSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:onClick="callSignUpFromLogin"
            android:text="Create Account" />

    </LinearLayout>>

    </LinearLayout>
</ScrollView>