<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Common.LoginSignup.SignUp"
    android:background="@color/yellow"
    android:padding="30dp"
    android:transitionName="transition_signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/genaral_back_icon"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="60dp"
           android:orientation="vertical">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/reg_name"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_full_name"
               android:textColorHint="@color/black"
               app:boxStrokeColor="@color/black"
               app:boxStrokeWidthFocused="2dp"
               app:endIconMode="clear_text"
               app:endIconTint="@color/black"
               app:hintTextColor="@color/black"
               app:startIconDrawable="@drawable/field_full_name_icon"
               app:startIconTint="@color/black">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:fontFamily="@font/brandon_grotesque_black"
                   android:inputType="text"
                   android:textColor="@color/black"
                   android:textCursorDrawable="@null" />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/reg_username"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_username"
               android:textColorHint="@color/black"
               app:boxStrokeColor="@color/black"
               app:boxStrokeWidthFocused="2dp"
               app:endIconMode="clear_text"
               app:endIconTint="@color/black"
               app:hintTextColor="@color/black"
               app:startIconDrawable="@drawable/user_name_icon"
               app:startIconTint="@color/black">


               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:fontFamily="@font/brandon_grotesque_black"
                   android:inputType="text"
                   android:textColor="@color/black"
                   android:textCursorDrawable="@null" />


           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/reg_email"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_email"
               android:textColorHint="@color/black"
               app:boxStrokeColor="@color/black"
               app:boxStrokeWidthFocused="2dp"
               app:endIconMode="clear_text"
               app:endIconTint="@color/black"
               app:hintTextColor="@color/black"
               app:startIconDrawable="@drawable/field_email_icon"
               app:startIconTint="@color/black">


               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:fontFamily="@font/brandon_grotesque_black"
                   android:inputType="textEmailAddress"
                   android:textColor="@color/black"
                   android:textCursorDrawable="@null" />


           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/reg_phoneNo"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_phoneno"
               android:textColorHint="@color/black"
               app:boxStrokeColor="@color/black"
               app:boxStrokeWidthFocused="2dp"
               app:endIconMode="clear_text"
               app:endIconTint="@color/black"
               app:hintTextColor="@color/black"
               app:startIconDrawable="@drawable/phone_icon"
               app:startIconTint="@color/black">


               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:fontFamily="@font/brandon_grotesque_black"
                   android:inputType="phone"
                   android:textColor="@color/black"
                   android:textCursorDrawable="@null" />


           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/reg_password"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_password"
               android:textColorHint="@color/black"
               app:boxStrokeColor="@color/black"
               app:boxStrokeWidthFocused="2dp"
               app:endIconTint="@color/black"
               app:hintTextColor="@color/black"
               app:passwordToggleEnabled="true"
               app:passwordToggleTint="@color/black"
               app:startIconDrawable="@drawable/password_icon"
               app:startIconTint="@color/black">


               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:fontFamily="@font/brandon_grotesque_black"
                   android:inputType="textPassword"
                   android:textColor="@color/black"
                   android:textCursorDrawable="@null" />


           </com.google.android.material.textfield.TextInputLayout>

      </LinearLayout>


        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:elevation="5dp"
            android:text="REGISTER"
            android:onClick="registerUser"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/reg_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:elevation="5dp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:onClick="callLoginFromSignUp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:transitionName="transition_login_btn" />
    </LinearLayout>

</ScrollView>